# bredx-game

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
assets/map/: map.json
assets/newmap/: mapa.tmj
assets/shaders/: glow_vignette.frag  glow_vignette.vert  shader.frag
docs/: customheader.html
docs/uml/: novo-diagrama.uml
src/: main.cpp
src/engine/Animation/: Animation.cpp  Animation.h
src/engine/CollisionManager/: CollisionManager.cpp  CollisionManager.h
src/engine/Ente/: Ente.cpp  Ente.h
src/engine/Paralaxe/: Paralaxe.cpp  Paralaxe.h
src/engine/PhysicsComponent/: PhysicsComponent.cpp  PhysicsComponent.h
src/engine/Renderer/: Renderer.cpp  Renderer.h
src/engine/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/engine/SceneManager/: Scene.h  SceneManager.cpp  SceneManager.h
src/engine/TileMap/: MapLoader.cpp  MapLoader.h  TileEntity.h  TileMap.h  Tilemap.cpp  Tilemap.h
src/game/: Game.cpp  Game.h
src/game/Entity/: Entity.cpp  Entity.h
src/game/Entity/Character/: Character.cpp  Character.h
src/game/Entity/Character/Player/: Player.cpp  Player.h
src/game/Scenes/CreditsScene/: CreditsScene.cpp  CreditsScene.h
src/game/Scenes/GameScene/: GameScene.cpp  GameScene.h
src/game/Scenes/MenuScene/: MenuScene.cpp  MenuScene.h
